(lang dune 3.16)

(name lcsession)

(source
 (github username/reponame))

(authors "Tazmilur Saad")

(maintainers "Tazmilur Saad")

(license MIT)

(package
 (name lcsession)
 (synopsis "CLI tool for managing leetcode sessions.")
 (description "CLI tool for managing leetcode sessions.")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))