(lang dune 3.16)

(name lcs)

(source
 (sourcehut syedtaz/lc-session))

(authors "Tazmilur Saad")

(maintainers "Tazmilur Saad")

(license MIT)

(package
 (name lcs)
 (synopsis "CLI tool for managing leetcode sessions.")
 (description "CLI tool for managing leetcode sessions.")
 (depends ocaml dune)
 (tags
  ("to describe")))